2009-03-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.26

2009-03-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_get_actor): Do not reference the actor.

2009-03-30  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Applied patch from
	NB#108114 to fix problem with actor resizing

2009-03-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* debian/rules:
	  Recognize the "debug" DEB_BUILD_OPTIONS parameter
	  to enable g_debug() and compile with -O0.
	* matchbox/client-types/mb-wm-client-menu.c
	* matchbox/core/mb-wm-client-window.c
	* matchbox/core/mb-window-manager.c:
	  Changed printf()s to g_log()s.
	* matchbox/core/mb-wm-util.c:
	  g_debug() trapped X errors.

2009-03-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.25

2009-03-27  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Removed corruption
	workaround, as it causes problems with the new kernel (and there
	is no need for it now anyway)

2009-03-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.24

2009-03-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fix crash of NB#104271

	* matchbox/core/mb-window-manager.c (mb_wm_handle_hang_client):
	Reference the client for the case that it is unreffed while we are in
	the hang client handler. When returning from the handler, check if the
	client was unreffed (unmapped) before trying shut it down.
	* matchbox/core/mb-wm-object.[ch] (mb_wm_object_get_refcount): New.

2009-03-26  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: apparently sometimes someone
	adds a null handler; protect against this.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: don't allow event handlers
	to stop processing of further events.  Give a warning if