@@ -1,3 +1,9 @@
+2009-03-31  Gordon Williams  <gordon.williams@collabora.co.uk>
+
+        * matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for NB#107323,
+          Any actors that were children of the ClutterClient's actor are
+          now removed (this also fixes a possible double-free for hd-decor)
+
 2009-03-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.26
